###############################################################################

=head1 CVS HEAD

=head2 New Features

=over 4

=item * 

New B<-F> command line switch to disable processing of any pshrc files

=item *

New builtin command B<modules> to display a list of loaded Perl modules

=item *

First attempt at a B<ulimit> command.

=item *

New default strategy B<perl> - send everything after 'p!' unparsed to the
perl interpreter (might be used later on for a special rc file compiler)

=back

=head2 Fixes

=over 4

=item *

Major startup speedup

=item *

There was a small, not very often occurring bug related to the usage of
Env::Array, due to a typo

=item *

Handling of ~ for username expansion should be bug-free now

=item *

The help builtin sometimes returned the wrong help (e.g. C<help set>
returned the help of setenv)

=back

=head2 Cleanups

=over 4

=item *

The package Psh::Job is now in the same file with Psh::Joblist. Psh::Job
stays an object while Psh::Joblist was converted to a procedural interface
as there was no need for OO here.

=item *

The package Psh::Locale::Base was renamed to Psh::Locale, so the Psh::Locale::
tree now only contains valid locales.

=item *

The C<@Psh::mon> and C<@Psh::wday> variables were removed. Please see the
perldoc for Psh::Locale

=item *

Switch to new evaluation strategies system. Please also see README.upgrade

=back

=head2 Other changes

=over 4

=item *

The comment strategy was removed. Comments are now already recognized and
ignored by the parser.

=cut

###############################################################################
###############################################################################
##
## 0.009
##
###############################################################################
###############################################################################

=head1 0.009 [2001-01-05]

=head2 New Features

=over 4

=item *
